@@ -4,6 +4,7 @@ import com.example.springjpaoracle.model.Course;
 import com.example.springjpaoracle.repository.CourseRepository;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 public final class ServiceUtil
 {
@@ -16,6 +17,6 @@ public final class ServiceUtil
         return courseNames.stream()
                 .map(courseName -> courseRepository.findByNameIgnoreCase(courseName)
                         .orElseGet(() -> courseRepository.save(new Course().setName(courseName))))
-                .toList();
+                .collect(Collectors.toList());
     }
 }
